--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,22 +1,24 @@
-version: '1.0'
+version: '3.7'
 
 services:
   php:
     image: php:8.2-fpm
-    working_dir: /var/www/html
+    depends_on:
+      - composer
     volumes:
-      - ../:/var/www/html
+      - "../:/var/www/html/"
   nginx:
     image: nginx
     ports:
-      - 80:80
+      - "80:80"
     volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
-      - ../:/var/www/html
-    links:
+      - "./default.conf:/etc/nginx/conf.d/default.conf"
+      - "../:/var/www/html/"
+    depends_on:
+      - composer
       - php
   composer:
-    image: composer
-    command: install
+    image: composer/composer
     volumes:
-      - "../:/app"
+      - "../composer:/app"
+    command: install
